[package]
name = "godot_image_replacer"
version = "0.1.1"
authors = ["Rafał Mikrut <mikrutrafal@protonmail.com>"]
edition = "2018"
description = "Image replacer, to speedup loading projects"
license = "MIT"
homepage = "https://github.com/qarmin/godot_image_replacer"
repository = "https://github.com/qarmin/godot_image_replacer"

[dependencies]
image = "0.23"
rand = "0.7"